add some keybindings & associated functions

--- a/init.org
+++ b/init.org
@@ -11,6 +11,7 @@
 - Makefiles
 - magit
 - recentf
+- embark?
 - flycheck
   - proselint (homebrew)
 - org-toc (sp?)
@@ -55,6 +56,8 @@ purpose of ~early-init.el~.
 ;; THIS FILE IS AUTOMAGICALLY GENERATED FROM `init.org`. ANY EDITS
 ;; MADE TO THIS FILE WILL BE LOST
 #+end_src
+
+TODO where did this code come from (jw?)
 
 #+begin_src emacs-lisp :tangle early-init.el
 (setq gc-cons-percentage 0.5
@@ -123,8 +126,39 @@ leave ~gnu~, ~nongnu~ and ~melpa~ in the list.
 * Keyboard
 
 #+begin_src emacs-lisp
+;; https://stackoverflow.com/questions/88399/how-do-i-duplicate-a-whole-line-in-emacs#answer-4717026
+(defun duplicate-line-or-region (&optional n)
+  "Duplicate current line, or region if active.
+With argument N, make N copies.
+With negative N, comment out original line and use the absolute value."
+  (interactive "*p")
+  (let ((use-region (use-region-p)))
+    (save-excursion
+      (let ((text (if use-region ; Get region if active, otherwise line
+                      (buffer-substring (region-beginning) (region-end))
+                    (prog1 (thing-at-point 'line)
+                      (end-of-line)
+                      (if (< 0 (forward-line 1)) ; Go to beginning of next line, or make a new one
+                          (newline))))))
+        (dotimes (i (abs (or n 1))) ; Insert N times, or once if not specified
+          (insert text))))
+    (if use-region nil ; Only if we're working with a line (not a region)
+      (let ((pos (- (point) (line-beginning-position)))) ;Save column
+        (if (> 0 n) ; Comment out original with negative arg
+            (comment-region (line-beginning-position) (line-end-position)))
+        (forward-line 1)
+        (forward-char pos)))))
+
 (use-package emacs
-  :bind* ("C-#" . other-window)) ; `:bind*` binds globally
+  :config
+  (setq kill-whole-line t) ; Kill line at BOL also kills newline
+  :bind* ; binds globally
+  ("C-#"         . other-window)
+  ("M-k"         . kill-whole-line)
+  ("C-d"         . duplicate-line-or-region)
+  ("C-S-<prior>" . previous-buffer)
+  ("C-S-<next>"  . next-buffer)
+)
 #+end_src
 
 * Annoyances
