--- a/init.org
+++ b/init.org
@@ -1,50 +1,3 @@
-* TODO
-
-- check for out-of-date init.el(c) vs init.org
-- maximized at startup (from spacemacs)
-- undecorated at startup (from spacemacs)
-- colored parentheses - rainbow-delimeters
-- colored color names - rainbow
-- shell-script mode
-- JSON mode
-- markdown mode
-- Makefiles
-- magit
-- recentf
-- embark?
-- flycheck
-  - proselint (homebrew)
-- org-toc (sp?)
-- full screen! (or, at least, a bit bigger)
-- custom.el stored somewhere
-- *~ stored somewhere
-
-** tabs
-
-#+begin_src emacs-lisp
-(setq-default indent-tabs-mode nil
-              tab-width 4)
-#+end_src
-
-** [[https://www.gnu.org/software/emacs/manual/html_node/emacs/Useless-Whitespace.html][delete-trailing-whitespace]]
-
-Delete whitespace at end-of-line and excess newlines at bottom-of-file when
-saving.
-
-#+begin_src emacs-lisp
-(add-hook 'before-save-hook 'delete-trailing-whitespace)
-#+end_src
-
-** [[https://www.gnu.org/software/emacs/manual/html_node/emacs/Saving-Emacs-Sessions.html][savehist]]
-
-Save minibuffer history
-
-#+begin_src emacs-lisp
-(use-package savehist
-  :init
-  (savehist-mode 1))
-#+end_src
-
 * early-init.el
 
 There are some things that should be done *before* ~init.el~ is loaded. That is the
@@ -424,4 +377,61 @@ There's likely going to be more added here
   :demand
   :config
   (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp")))
+#+end_src
+
+* TODO
+
+- check for out-of-date init.el(c) vs init.org
+- maximized at startup (from spacemacs)
+- undecorated at startup (from spacemacs)
+- colored parentheses - rainbow-delimeters
+- colored color names - rainbow
+- shell-script mode
+- JSON mode
+- markdown mode
+- Makefiles
+- magit
+- recentf
+- embark?
+- flycheck
+  - proselint (homebrew)
+- org-toc (sp?)
+- full screen! (or, at least, a bit bigger)
+- custom.el stored somewhere
+- *~ stored somewhere
+
+** which-key
+
+#+begin_src emacs-lisp
+(use-package which-key
+  :ensure nil
+  :demand t
+  :config
+  (which-key-mode t))
+#+end_src
+
+** tabs
+
+#+begin_src emacs-lisp
+(setq-default indent-tabs-mode nil
+              tab-width 4)
+#+end_src
+
+** [[https://www.gnu.org/software/emacs/manual/html_node/emacs/Useless-Whitespace.html][delete-trailing-whitespace]]
+
+Delete whitespace at end-of-line and excess newlines at bottom-of-file when
+saving.
+
+#+begin_src emacs-lisp
+(add-hook 'before-save-hook 'delete-trailing-whitespace)
+#+end_src
+
+** [[https://www.gnu.org/software/emacs/manual/html_node/emacs/Saving-Emacs-Sessions.html][savehist]]
+
+Save minibuffer history
+
+#+begin_src emacs-lisp
+(use-package savehist
+  :init
+  (savehist-mode 1))
 #+end_src
