--- a/init.org
+++ b/init.org
@@ -943,3 +943,20 @@ Provides prettier, and more helpful replacements for ~describe-function~,
    ("C-h k" . #'helpful-key)
    ("C-h S" . #'helpful-command)))
 #+end_src
+
+** [[https://magit.vc/][magit]]
+
+This is prot's magit setup.
+
+#+begin_src emacs-lisp
+(use-package magit
+  :ensure t
+  :bind ("C-c g" . magit-status)
+  :init
+  (setq magit-define-global-key-bindings nil)
+  (setq magit-section-visibility-indicator '("⮧"))
+  :config
+  (setq git-commit-summary-max-length 50)
+  (setq git-commit-style-convention-checks '(non-empty-second-line))
+  (setq magit-diff-refine-hunk t))
+#+end_src
