--- a/init.org
+++ b/init.org
@@ -74,7 +74,7 @@ Packages that are included with emacs should use ~:ensure nil~.
 
 #+begin_src emacs-lisp
 (use-package quelpa-use-package
-  :demand
+  :demand t
   :config
   (setq quelpa-checkout-melpa-p nil
         quelpa-build-explicit-tar-format-p t))
@@ -145,7 +145,7 @@ need the menus, use ~<F10>~.
 
 #+begin_src emacs-lisp
 (use-package ef-themes
-  :demand
+  :demand t
   :init
   (mapc #'disable-theme custom-enabled-themes) ;; Disable all other themes
   :config
@@ -182,7 +182,7 @@ been istalled (unless there's some way to do that using =use-package=.
 #+begin_src emacs-lisp
 (use-package all-the-icons
   :disabled
-  :demand
+  :demand t
   :if (display-graphic-p))
 #+end_src
 
@@ -191,7 +191,7 @@ been istalled (unless there's some way to do that using =use-package=.
 #+begin_src emacs-lisp
 (use-package all-the-icons-dired ; pulls in all-the-icons
   :disabled
-  :demand
+  :demand t
   :hook (dired-mode . (lambda () (all-the-icons-dired-mode t))))
 #+end_src
 
@@ -310,7 +310,7 @@ Mostly (all?) takn from [[https://github.com/zakame/.emacs.d/blob/a7e4cd351d62db
 
 #+begin_src emacs-lisp
 (use-package yasnippet
-  :demand
+  :demand t
   :config
   (yas-global-mode 1)
   (use-package yasnippet-snippets))
@@ -405,7 +405,7 @@ There's likely going to be more added here
 #+begin_src emacs-lisp
 (use-package org-tempo
   :ensure nil
-  :demand
+  :demand t
   :config
   (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp")))
 #+end_src
@@ -438,7 +438,7 @@ Re-indents region after move.
 
 #+begin_src emacs-lisp
 (use-package move-text
-  :demand
+  :demand t
   :config
   (move-text-default-bindings)
   ;; from move-text repo:
@@ -591,7 +591,7 @@ Highlights the current line.
 
 #+begin_src emacs-lisp
 (use-package hl-line
-  :demand
+  :demand t
   :config
   (global-hl-line-mode t))
 #+end_src
