init.org: move `initial-frame-alist` code to `early-init.el`
Needed to ensure that first line of both `early-init.el` and `init.el` is the
`lexical-bindings` cookie.

--- a/init.org
+++ b/init.org
@@ -29,7 +29,7 @@ TODO: where did this code come from (jw?). See also bedrock.
 
 [[https://www.youtube.com/watch?v=uC6s-2qBXdU][Maximize the frame on startup]]
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :tangle early-init.el
 (add-to-list 'initial-frame-alist '(fullscreen . maximized))
 #+end_src
 
